--- a/ios/RNNYT/Info.plist
+++ b/ios/RNNYT/Info.plist
@@ -41,7 +41,6 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSAppTransportSecurity</key>
-	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
@@ -50,6 +49,13 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>nytimes.com</key>
+		   <dict>
+		      <key>NSIncludesSubdomains</key>
+		      <true/>
+		      <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+		      <true/>
+		   </dict>
 		</dict>
 	</dict>
 </dict>
